# manual-engine

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  navigation_cpu_profile.txt  vcpkg.json
assets/config/: biomes.yaml  input.yaml  navigation_profiles.yaml  object_archetypes.yaml
assets/models/: README.md
assets/shaders/src/: fs_imgui.fs  fs_mesh.fs  fs_terrain.fs  varying.def.sc  vs_debug_line.vs  vs_imgui.vs  vs_mesh.vs  vs_skinned_mesh.vs  vs_terrain.vs
docs/: actor_authoring_roadmap.md  animation_roadmap.md  authored_scene_roadmap.md  editor_roadmap.md  engine_overview.md  navigation_roadmap.md  open_world_streaming_roadmap.md  performance_roadmap.md  scene_component_roadmap.md  system_contracts.md  system_inboxes.md  terrain_rework_roadmap.md  work_log.md
docs/scene_runtime/: README.md  phase_01_scene_kernel.md  phase_02_transform_hierarchy.md  phase_03_tick_scheduler.md  phase_04_asset_registry.md  phase_05_render_component_bridge.md  phase_06_authored_scene_adapter.md  phase_07_animated_model_adapter.md  phase_10_physics_integration.md  serialization_conventions.md
docs/terrain_runtime/: t0_heightmap_preflight.md  t9_serialization_preparation.md
projects/: default.editor.yaml
scripts/editor/: validate_profile.lua
src/: main.cpp
src/App/: AGENTS.md  AuthoredRuntime.inl  EditorLiveApply.hpp  EditorProjectSettings.cpp  EditorProjectSettings.hpp  EditorRebuildCoordinator.cpp  EditorRebuildCoordinator.hpp  EditorSettingsReflection.cpp  EditorSettingsReflection.hpp  EditorToolScripting.cpp  EditorToolScripting.hpp  EditorUi.cpp  EditorUi.hpp  ModernSceneLoop.cpp  ModernSceneLoop.hpp  editor_main.cpp  main.cpp
src/Assets/: AGENTS.md  HeightmapImporter.cpp  HeightmapImporter.hpp
src/Assets/Assimp/: Importer.cpp  Importer.hpp
src/Assets/Registry/: AGENTS.md
src/Engine/: AGENTS.md  ActorAuthoring.cpp  ActorAuthoring.hpp  ActorCommand.cpp  ActorCommand.hpp  ActorComponentAuthoring.cpp  ActorComponentAuthoring.hpp  ActorController.cpp  ActorController.hpp  ActorGameplayComponents.cpp  ActorGameplayComponents.hpp  ActorSelection.cpp  ActorSelection.hpp  AnimatedModel.cpp  AnimatedModel.hpp  AnimatedModelAsync.cpp  AnimatedModelAsync.hpp  AnimatedModelCache.cpp  AnimatedModelCache.hpp  AnimatedModelPose.cpp  AnimatedModelPose.hpp  AnimationPose.hpp  AssetCache.cpp  AssetCache.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AsyncWorkQueue.cpp  AsyncWorkQueue.hpp  AuthoredScene.cpp  AuthoredScene.hpp  AuthoredSceneAsync.cpp  AuthoredSceneAsync.hpp  Biome.cpp  Biome.hpp  BlockingCollision.cpp  BlockingCollision.hpp  ChunkStreamer.cpp  ChunkStreamer.hpp  ChunkTypes.cpp  ChunkTypes.hpp  (+107 more)
src/Engine/Components/: AGENTS.md
src/Engine/DebugVisualization/: AGENTS.md
src/Engine/Physics/: AGENTS.md  ScenePhysics.cpp  ScenePhysics.hpp
src/Engine/Scene/: AGENTS.md  AnimatedSceneAdapter.cpp  AnimatedSceneAdapter.hpp  AuthoredSceneAdapter.cpp  AuthoredSceneAdapter.hpp  RendererSceneRenderBackend.cpp  RendererSceneRenderBackend.hpp  Scene.cpp  Scene.hpp  SceneRenderBridge.cpp  SceneRenderBridge.hpp
src/Engine/Scripting/: AGENTS.md
src/Renderer/: AGENTS.md  DebugUi.cpp  DebugUi.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  VertexLayouts.cpp  VertexLayouts.hpp  core.cpp  core.hpp
test/shaders/: varying.def.sc
tests/app/: EditorLiveApplyTestRunner.cpp  EditorProjectSettingsStreamingStub.cpp  EditorProjectSettingsTestRunner.cpp  EditorRebuildCoordinatorTestRunner.cpp  EditorSettingsReflectionTestRunner.cpp  EditorToolScriptingTestRunner.cpp  EditorUiTestRunner.cpp
tests/assets/: AssetImportTestRunner.cpp  AssetRegistryTestRunner.cpp  HeightmapImportTestRunner.cpp
tests/assets/fixtures/: authored_scene_fixture.gltf  skinned_animation_fixture.gltf
tests/authored_scene/: AuthoredSceneRendererSmoke.cpp  AuthoredSceneTestRunner.cpp  RendererOwnershipStubs.cpp
tests/engine/: DebugVisualizationTestRunner.cpp  OpenWorldSceneChunkStreamingTestRunner.cpp  OpenWorldStreamingRuntimeTestRunner.cpp  OpenWorldStreamingTestRunner.cpp
tests/navigation/: NavigationRuntimeTestRunner.cpp  NavigationSceneGeometryTestRunner.cpp  NavigationTestRunner.cpp  RendererStubs.cpp
tests/renderer/: TextureTestRunner.cpp
tests/scene/: ActorAuthoringTestRunner.cpp  ActorComponentAuthoringTestRunner.cpp  ActorGameplayComponentsTestRunner.cpp  AnimatedSceneAdapterTestRunner.cpp  AuthoredSceneAdapterTestRunner.cpp  SceneBehaviorHooksTestRunner.cpp  SceneCharacterMovementTestRunner.cpp  SceneLuaScriptingTestRunner.cpp  ScenePhysicsTestRunner.cpp  SceneReflectionTestRunner.cpp  SceneRenderBridgeTestRunner.cpp  SceneSerializationTestRunner.cpp  SceneTerrainAlignmentTestRunner.cpp  SceneTestRunner.cpp  SceneWorldMigrationTestRunner.cpp
tests/terrain/: TerrainDatasetTestRunner.cpp  TerrainDerivedCacheTestRunner.cpp  TerrainLayeredRenderingTestRunner.cpp  TerrainMaterialMetadataTestRunner.cpp  TerrainNavigationAdapterTestRunner.cpp  TerrainPhysicsColliderAdapterTestRunner.cpp  TerrainRenderLodAdapterTestRunner.cpp  TerrainSerializationPrepTestRunner.cpp
